syntax = "proto3";

option csharp_namespace = "Scraper";

package scraper;

service SchedulerResults {
  rpc Query (QueryRequest) returns (QueryResponse);
}

message QueryRequest {
  string url = 1;
}

message QueryResponseItem {
  string url = 1;
}

message QueryResponse {
  repeated QueryResponseItem results = 1;
}
